hopefully everythings fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://starvillePL.github.io/starvillePL.github.io",
+  "homepage": "https://starvillepl.github.io/SPLWeb/",
   "name": "splweb",
   "private": true,
   "version": "0.0.0",
